--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,12 @@ header {
   width: 220px;
   border-radius: 40px; 
   margin-right: 30px;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+  &:hover{
+    box-shadow: 0px 14px 35px  rgba(0,0,0, 0.08);
+    transform: translateY(-8px);
+  }
 
   span{
     font-size: 12px;
@@ -64,7 +70,36 @@ header {
   height: 32px;
   width: 32px;
   cursor: pointer;
+
+  &:hover{
+    background-color:  rgb(8, 218, 8);
+  }
 }
+
+
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+  z-index: 1;
+}
+.drawer{
+  position: absolute;
+  width: 420px;
+  height: 100%;
+  right: 0;
+  background:#ffffff;
+  box-shadow: -10px 4px 20px rgba(0,0,0,0.1);
+
+  h2{
+    margin: 0;
+    font-size: 24px;
+  }
+}
+
 
 .cartEmpty {
   text-align: center;
